--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,6 @@ local.properties
 
 # node.js
 #
-node_modules/
 npm-debug.log
 yarn-error.log
 
@@ -58,3 +57,4 @@ buck-out/
 
 # Bundle artifact
 *.jsbundle
+node_modules
